--- a/app/src/main/res/layout-sw380dp/activity_main.xml
+++ b/app/src/main/res/layout-sw380dp/activity_main.xml
@@ -4,84 +4,43 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:id="@+id/main_relout"
+    android:background="@color/colorBackground"
     >
+
     <TextView
+        android:id="@+id/noListEnteredText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="@string/NoListEntered"
-        android:textSize="22sp"
-        android:textColor="#bdbdbd"
-        android:id="@+id/noListEnteredText">
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#ffffff"
+        android:textSize="26sp">
+
     </TextView>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="100dp"
         android:id="@+id/BloodWorkMainActivity"
-        android:background="@color/labThird"
+        android:background="@drawable/rounded_corner_card"
         android:onClick="goToBloodWorkMainActivity"
         android:padding="2dp"
         android:layout_margin="10dp"
-        android:elevation="10dp"
+        android:elevation="5dp"
         android:visibility="gone">
 
         <TextView
+            android:id="@+id/BloodWorkText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:fontFamily="sans-serif-smallcaps"
+            android:fontFamily="@font/nunito_extrabold"
             android:gravity="center|center_horizontal|center_vertical"
             android:text="@string/YourBloodWork"
-            android:textColor="#FFFFFF"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            android:id="@+id/BloodWorkText">
+            android:textColor="@color/colorPrimary"
+            android:textSize="32sp">
         </TextView>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/BloodWorkText"
-            android:layout_toEndOf="@+id/BloodWorkText"
-            android:src="@drawable/rightred"
-            android:layout_centerVertical="true">
-
-        </ImageView>
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:id="@+id/MedicationMainActivity"
-        android:layout_below="@+id/BloodWorkMainActivity"
-        android:background="@color/medicationThird"
-        android:onClick="goToMedicationMainActivity"
-        android:padding="2dp"
-        android:layout_margin="10dp"
-        android:elevation="10dp"
-        android:visibility="gone">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:fontFamily="sans-serif-smallcaps"
-            android:gravity="center|center_horizontal|center_vertical"
-            android:text="@string/YourMedication"
-            android:textColor="#FFFFFF"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            android:id="@+id/MedicationText">
-        </TextView>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/MedicationText"
-            android:layout_toEndOf="@+id/MedicationText"
-            android:src="@drawable/rightblue"
-            android:layout_centerVertical="true">
-        </ImageView>
     </RelativeLayout>
 
     <RelativeLayout
@@ -97,20 +56,17 @@
                 android:layout_alignParentRight="true"
                 android:id="@+id/fab_lab"
                 android:layout_alignParentEnd="true"
-                android:backgroundTint="#ff8a65"
-                android:src="@drawable/syringeicon"/>
+                android:src="@drawable/syringe_icon_48_light"/>
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/info"
                 android:layout_alignParentBottom="true"
-                android:backgroundTint="#bdbdbd"
-                android:background="#bdbdbd"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:onClick="gotoinfopage"
-                android:src="@drawable/info_icon"/>
+                android:src="@drawable/info_icon_48_light"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
