--- a/app/src/main/res/layout-sw380dp/graph_view_layout.xml
+++ b/app/src/main/res/layout-sw380dp/graph_view_layout.xml
@@ -4,11 +4,15 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="5dp"
-    android:padding="5dp">
-    <com.jjoe64.graphview.GraphView
+    >
+    <TextView
         android:layout_width="wrap_content"
-        android:layout_height="250dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/graphview_textview">
+    </TextView>
+    <com.jjoe64.graphview.GraphView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:id="@+id/graph_view">
 
     </com.jjoe64.graphview.GraphView>
