--- a/app/src/main/res/layout-sw380dp/activity_blood_work_main.xml
+++ b/app/src/main/res/layout-sw380dp/activity_blood_work_main.xml
@@ -3,18 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:background="@color/colorBackground"
     >
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/colorBackground"
         >
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/listview_main"
-            android:layout_margin="5dp"
-            android:elevation="10dp"
-            android:dividerHeight="5.0sp"
+            android:padding="8dp"
+            android:dividerHeight="8dp"
+            android:background="@color/colorBackground"
+            android:divider="@android:color/transparent"
             >
         </ListView>
     </RelativeLayout>
