--- a/app/src/main/res/layout-sw380dp/activity_trackpage.xml
+++ b/app/src/main/res/layout-sw380dp/activity_trackpage.xml
@@ -36,23 +36,30 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/toolbarLabResult"
-        android:text="graph_view"
+        android:text="GRAPH_VIEW"
         android:id="@+id/graph_view_button">
 
     </Button>
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/graph_view_button"
+        android:visibility="gone"
+        android:id="@+id/scrollview_graphview">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
         android:orientation="vertical"
+        android:padding="5dp"
         android:id="@+id/parentLinearLayout1">
-
     </LinearLayout>
+    </ScrollView>
 
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/parentLinearLayout1"
+        android:id="@+id/scrollview_deafultview"
+        android:layout_below="@id/scrollview_graphview"
        >
 
     <LinearLayout
