--- a/app/src/main/res/layout-sw380dp/full_result_views_layout.xml
+++ b/app/src/main/res/layout-sw380dp/full_result_views_layout.xml
@@ -11,42 +11,29 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginStart="5dp"
-        android:textColor="#131212"
-        android:textSize="20sp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
+        android:textColor="#000000"
+        android:textSize="22sp"
         android:textStyle="normal"
         android:theme="@style/MyEditText"
-        app:fontFamily="sans-serif-condensed-medium" />
+        app:fontFamily="@font/nunito_bold" />
 
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_centerHorizontal="true"
-        android:gravity="right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_marginLeft="2dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/textView"
+        android:layout_alignParentRight="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
-        android:textColor="@color/labTextHeading"
-        android:textSize="20sp"
+        android:gravity="right"
+        android:textColor="@color/colorPrimary"
+        android:textSize="24sp"
         android:textStyle="normal"
         android:theme="@style/MyEditText"
-        app:fontFamily="sans-serif" />
+        app:fontFamily="@font/nunito_extrabold" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@+id/textView"
-        android:background="@android:color/darker_gray"/>
 
 </RelativeLayout>
