--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#afb53f</color>
+    <color name="colorPrimary">#FF1E58</color>
     <color name="colorPrimaryDark">#5b520f</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#FFFFFF</color>
     <color name="textColorPrimary">#000000</color>
-    <color name="colorBackground">#FFFFFF</color>
+    <color name="colorBackground">#E5E5E5</color>
+    <color name="cardBackground">#FFFFFF</color>
     <color name="labPrimary">#E64A19</color>
     <color name="labSecondary">#ffccbc</color>
     <color name="labThird">#ff8a65</color>
@@ -18,4 +19,7 @@
     <color name="appIconColor">#f50057</color>
     <color name="okayColor">#00c853</color>
     <color name="editColor">#d50000</color>
+
+
+
 </resources>
