--- a/app/src/main/res/drawable/spinner_background.xml
+++ b/app/src/main/res/drawable/spinner_background.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android"
     android:exitFadeDuration="@android:integer/config_mediumAnimTime">
-    <item android:state_pressed="true" android:drawable="@color/labSecondary" />
-    <item android:state_selected="true" android:drawable="@color/labSecondary" />
+    <item android:state_pressed="true" android:drawable="@color/colorBackground" />
+    <item android:state_selected="true" android:drawable="@color/colorBackground" />
     <item>
         <inset android:insetLeft="-1dp" android:insetRight="-1dp">
             <shape android:shape="rectangle">
-                <solid android:color="@color/labThird" />
+                <solid android:color="@color/colorBackground" />
                 <corners android:radius="5dp"/>
                 <padding android:left="2dp" android:top="2dp" android:right="2dp" android:bottom="2dp" />
             </shape>
