--- a/app/src/main/res/layout-sw380dp/my_list.xml
+++ b/app/src/main/res/layout-sw380dp/my_list.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/labSecondary"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 <GridLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:elevation="15dp"
-    android:background="@color/labThird"
-    android:padding="2dp"
+android:layout_marginBottom="5dp"
     >
 
     <TextView
@@ -20,9 +17,7 @@
         android:layout_row="0"
         android:layout_column="0"
         android:textColor="@color/labText"
-        android:layout_marginLeft="2dp"
-        android:layout_marginStart="2dp"
-        android:textSize="14sp"
+        android:textSize="20sp"
         app:fontFamily="sans-serif-condensed-medium" />
 
     <TextView
@@ -31,10 +26,10 @@
         android:layout_height="wrap_content"
         android:layout_row="0"
         android:layout_column="2"
-        android:layout_marginLeft="2dp"
-        android:layout_marginStart="2dp"
-        android:textColor="@color/labText"
-        android:textSize="16sp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginStart="1dp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="20sp"
         app:fontFamily="sans-serif-condensed-medium" />
 
     <Button
@@ -50,4 +45,4 @@
         android:text="@string/DeleteButton"
         />
 </GridLayout>
-</androidx.cardview.widget.CardView>
+</LinearLayout>
