--- a/app/src/main/res/layout-sw380dp/activity_extra_features_blood_work.xml
+++ b/app/src/main/res/layout-sw380dp/activity_extra_features_blood_work.xml
@@ -3,178 +3,183 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:background="@color/colorBackground"
+    >
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:elevation="10dp">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/DoctorsCommentRelativeLayout"
-        android:elevation="10dp">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="@drawable/rounded_corner"
-        android:text="@string/DoctorsCommentText"
-        android:id="@+id/DoctorsComment"
-        android:elevation="10dp"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_margin="5dp"
-        android:textColor="#ffffff"
-        android:padding="2dp"
-        app:fontFamily="sans-serif-condensed"
-        android:layout_alignParentTop="true">
-    </TextView>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_below="@+id/DoctorsComment"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp"
-        android:maxLength="150"
-        android:padding="5dp"
-        android:background="@drawable/doctors_comment_edittext"
-        android:hint="Any important notes from doctor...?"
-        android:id="@+id/DoctorsCommentEditText"
-        >
-    </EditText>
-        <Button
-            android:id="@+id/okButtonComment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/ok_button_basic_lab"
-            android:textSize="15sp"
-            android:layout_below="@id/DoctorsCommentEditText"
-            android:layout_alignParentRight="true"
-            android:textColor="#ffffff"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:onClick="setDoctorsComment"
-            android:background="#00c853">
-
-        </Button>
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="3dp"
-        android:layout_below="@+id/DoctorsCommentRelativeLayout"
-        android:id="@+id/ReminderRefill">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Remind my next BloodWork"
-            android:elevation="10dp"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:layout_margin="5dp"
-            android:textColor="#ffffff"
-            android:background="@drawable/rounded_corner"
-            android:padding="2dp"
-            app:fontFamily="sans-serif-condensed"
-            >
-        </TextView>
-
-
-        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:id="@+id/radioButtonRefill"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp">
-            <RadioButton android:id="@+id/radio_pirates1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="No"
-                android:onClick="onRadioButtonClicked"
-                android:checked="true"/>
-            <RadioButton android:id="@+id/radio_ninjas1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Yes"
-                android:onClick="onRadioButtonClicked"/>
-        </RadioGroup>
-
-    </LinearLayout>
-    <DatePicker
-        android:id="@+id/simpleDatePicker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:datePickerMode="spinner"
-        android:layout_centerInParent="true"
-        android:background="@drawable/rounded_corner_datepicker"
-        android:elevation="10dp"
-        android:visibility="invisible"
-        android:calendarViewShown="false"
-        android:layout_below="@id/ReminderRefill"/>
+            android:id="@+id/main">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/simpleDatePicker"
-                android:id="@+id/timeNoteLinearLayout"
-                android:visibility="invisible"
-                android:orientation="horizontal"
-                android:padding="10dp">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/smallinfoicon"
-                    android:layout_marginTop="3dp"
-                    android:scaleType="center"
-                    android:adjustViewBounds="true">
-                </ImageView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="You will get remainder on the morning 08:30"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginStart="5dp">
-                </TextView>
+                android:orientation="vertical"
+                android:id="@+id/linear_layout_main">
+                 <RelativeLayout
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:id="@+id/DoctorsCommentRelativeLayout"
+                     android:background="@drawable/rounded_corner_card"
+                     android:elevation="10dp"
+                     android:layout_marginBottom="2.5dp">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:layout_alignParentLeft="true"
+                            android:paddingLeft="10dp"
+                            android:paddingTop="10dp"
+                            android:paddingBottom="10dp"
+                            android:text="@string/DoctorsCommentText"
+                            android:id="@+id/DoctorsComment"
+                            android:textColor="@color/textColorPrimary"
+                            android:textSize="26sp"
+                            android:textStyle="bold"
+                            android:typeface="normal"
+                            app:fontFamily="@font/nunito_extrabold">
+                        </TextView>
+                 </RelativeLayout>
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="150dp"
+                            android:layout_below="@+id/DoctorsCommentRelativeLayout"
+                            android:layout_marginLeft="8dp"
+                            android:layout_marginRight="8dp"
+                            android:layout_marginTop="5dp"
+                            android:maxLength="150"
+                            android:padding="5dp"
+                            android:background="@drawable/rounded_corner_card"
+                            android:hint=" notes from doctor..."
+                            android:id="@+id/DoctorsCommentEditText">
+                        </EditText>
+                        <Button
+                            android:id="@+id/okButtonComment"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/ok_button_basic_lab"
+                            android:layout_below="@id/DoctorsCommentEditText"
+                           android:layout_gravity="end"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginRight="8dp"
+                            android:padding="5dp"
+                            android:onClick="setDoctorsComment"
+                            android:textSize="18sp"
+                            android:background="@drawable/button_rounded_corner"
+                            android:textColor="@color/textColorPrimary"
+                            android:textStyle="bold"
+                            app:fontFamily="sans-serif-smallcaps">
+                        </Button>
             </LinearLayout>
 
-        </RelativeLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_below="@+id/linear_layout_main"
+                android:id="@+id/ReminderRefill">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_corner_card"
+                    android:elevation="10dp"
+                    android:layout_marginBottom="2.5dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:text="Schedule BloodWork"
+                    android:textColor="@color/textColorPrimary"
+                    android:textSize="26sp"
+                    android:textStyle="bold"
+                    android:typeface="normal"
+                    app:fontFamily="@font/nunito_extrabold">
+                </TextView>
+                </RelativeLayout>
+                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:id="@+id/radioButtonRefill"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp">
+                    <RadioButton android:id="@+id/radio_pirates1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="No"
+                        android:checked="true"
+                        android:buttonTint="@color/colorPrimary"/>
+                    <RadioButton android:id="@+id/radio_ninjas1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Yes"
+                        android:buttonTint="@color/colorPrimary"/>
+                </RadioGroup>
+            </LinearLayout>
+            <DatePicker
+                android:id="@+id/simpleDatePicker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:datePickerMode="spinner"
+                android:layout_centerInParent="true"
+                android:background="@drawable/rounded_corner_card"
+                android:visibility="invisible"
+                android:calendarViewShown="false"
+                android:layout_below="@id/ReminderRefill"/>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/simpleDatePicker"
+                        android:id="@+id/timeNoteLinearLayout"
+                        android:visibility="invisible"
+                        android:orientation="horizontal"
+                        android:padding="10dp">
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/smallinfoicon"
+                            android:layout_marginTop="3dp"
+                            android:scaleType="center"
+                            android:adjustViewBounds="true">
+                        </ImageView>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="You will get remainder on the morning 08:30"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginStart="5dp">
+                        </TextView>
+                    </LinearLayout>
+                </RelativeLayout>
     </ScrollView>
-
-
     <RelativeLayout
         android:id="@+id/buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true">
-
-
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_camera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_gravity="bottom|start"
             android:onClick="closeActivity"
-            android:backgroundTint="#d50000"
-            android:src="@drawable/baseline_clear_white_48dp" />
+
+            android:src="@drawable/xmark_icon_48_light"/>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_back_lab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:onClick="backToMedicationReminderSettings"
-            android:src="@drawable/baseline_done_white_48dp"
-            android:backgroundTint="#00c853"/>
+            android:src="@drawable/tickmark_icon_light_48"/>
     </RelativeLayout>
-
 </RelativeLayout>
