--- a/app/src/main/res/layout-sw380dp/my_list.xml
+++ b/app/src/main/res/layout-sw380dp/my_list.xml
@@ -7,7 +7,7 @@
 <GridLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-android:layout_marginBottom="5dp"
+    android:layout_marginBottom="5dp"
     >
 
     <TextView
@@ -18,7 +18,7 @@ android:layout_marginBottom="5dp"
         android:layout_column="0"
         android:textColor="@color/labText"
         android:textSize="20sp"
-        app:fontFamily="sans-serif-condensed-medium" />
+        app:fontFamily="@font/open_sans_semibold" />
 
     <TextView
         android:id="@+id/lab_rhs"
@@ -28,21 +28,21 @@ android:layout_marginBottom="5dp"
         android:layout_column="2"
         android:layout_marginLeft="1dp"
         android:layout_marginStart="1dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:textColor="@color/colorPrimary"
-        android:textSize="20sp"
-        app:fontFamily="sans-serif-condensed-medium" />
+        android:textSize="22sp"
+        app:fontFamily="@font/open_sans_semibold" />
 
-    <Button
+    <ImageView
         android:id="@+id/delete_button_listview"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_row="0"
         android:layout_column="3"
-        android:layout_marginLeft="5dp"
-        android:layout_marginStart="5dp"
-        android:background="@drawable/delete_button_my_list"
+        android:src="@drawable/trash_icon_24_light"
         android:onClick="delete"
-        android:text="@string/DeleteButton"
+        android:layout_gravity="center_vertical"
         />
 </GridLayout>
 </LinearLayout>
