--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="medicationText">#212121</color>
     <color name="appIconColor">#f50057</color>
     <color name="okayColor">#00c853</color>
-    <color name="editColor">#d50000</color>
+    <color name="editColor">#d50000</color>\
 
 
 
