updating UI and adding GraphView in the tracking page

--- a/app/src/main/res/layout-sw380dp/activity_blood_work_main.xml
+++ b/app/src/main/res/layout-sw380dp/activity_blood_work_main.xml
@@ -21,4 +21,13 @@
             >
         </ListView>
     </RelativeLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/track_icon_light_48"
+        android:layout_centerHorizontal="true"
+        android:onClick="gotoTrackPage"
+        />
 </RelativeLayout>
