--- a/app/src/main/res/layout-sw380dp/activity_trackpage.xml
+++ b/app/src/main/res/layout-sw380dp/activity_trackpage.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".trackpage">
+    tools:context=".trackpage"
+    android:background="@color/colorBackground">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,7 +13,6 @@
         android:background="@drawable/rounded_corner"
         android:id="@+id/toolbarLabResult"
         android:elevation="20dp"
-
         android:layout_margin="5dp">
 
         <TextView
@@ -25,7 +25,7 @@
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
             android:text="@string/bloodTracking"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:textSize="28sp"
             android:textStyle="bold"
             android:typeface="normal"
