--- a/app/src/main/res/layout-sw380dp/main_list.xml
+++ b/app/src/main/res/layout-sw380dp/main_list.xml
@@ -10,7 +10,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main_list_relout"
-    android:padding="10dp"
+    android:padding="8dp"
     android:elevation="5dp"
     >
 
@@ -18,9 +18,7 @@
     <RelativeLayout
         android:id="@+id/main"
         android:layout_width="130dp"
-        android:layout_height="wrap_content"
-        android:padding="0dp"
-        >
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/main_value"
@@ -54,7 +52,7 @@
              />
     </RelativeLayout>
     <RelativeLayout
-        android:layout_width="145dp"
+        android:layout_width="150dp"
         android:layout_height="110dp"
         android:layout_toRightOf="@+id/second_layout"
         android:layout_toEndOf="@+id/second_layout"
@@ -69,12 +67,12 @@
             android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
             android:textColor="#000000"
-            android:textSize="20sp"
+            android:textSize="18sp"
             app:fontFamily="@font/nunito_bold" />
 
     </RelativeLayout>
     <RelativeLayout
-        android:layout_width="140dp"
+        android:layout_width="135dp"
         android:layout_height="110dp"
         android:layout_toEndOf="@+id/main"
         android:layout_toRightOf="@+id/main"
@@ -89,7 +87,7 @@
 
             <TextView
                 android:id="@+id/second_value"
-                android:layout_width="90dp"
+                android:layout_width="85dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:autoSizeTextType="uniform"
@@ -134,7 +132,7 @@
 
             <TextView
                 android:id="@+id/third_value"
-                android:layout_width="90dp"
+                android:layout_width="85dp"
                 android:layout_height="wrap_content"
                 android:autoSizeTextType="uniform"
                 android:gravity="center"
